admin/resources/css/spa-admin.css
/* ... */
#sfmaincontainer .sf-panel-body .sf-half-form .sf-panel-body-top {
    float: left;
    margin: -20px 0 20px -20px;
    padding: 20px;
    background-color: #EAF0F4;
    width: calc(100% + 40px);
    line-height: 20px;
    -khtml-border-radius: 4px 4px 0px 0px;
    -webkit-border-radius: 4px 4px 0px 0px;
    border-radius: 4px 4px 0px 0px;
    font-family: "Open Sans Semibold";
    font-size: 14px;
    color: #27476E;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-panel-body-top-left {
    float: left;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-panel-body-top-left h4 {
    margin: 0;
    font-size: 14px;
    line-height: 19px;
    color: #006992;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-panel-body-top-right {
    float: right;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-fieldset {
    position: relative;
    margin-bottom: 30px;
    padding: 20px;
    background-color: #FFF;
    -khtml-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-fieldset .sf-alert-block {
    margin: 0 0 20px 0;
}
#sfmaincontainer .sf-panel-body .sf-half-form+.sf-half-form {
    padding: 0 0 0 15px;
}
#sfmaincontainer .sf-panel-body .sf-half-form+.sf-form-submit-bar {
    margin: 0;
}
#sfmaincontainer .sf-upload {
    display: inline-block;
    position: relative;
    margin: 0;
}
#sfmaincontainer .sf-upload label {
    display: none;
}
#sfmaincontainer .sf-upload #sf-upload-button {
}
#sfmaincontainer .sf-upload #sf-upload-status {
    position: absolute;
    background: rgba(0, 185, 208, .7);
    padding: 0 10px;
    right: 0;
    color: white;
    top: 30px;
    -khtml-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    z-index: 999;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk,
#sfmaincontainer .sf-fieldset .subsubsub {
    width: auto;
    margin: 17px 0 0 0;
    font-size: 14px;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk li,
#sfmaincontainer .sf-fieldset .subsubsub li {
    float: left;
    width: auto;
    margin-right: 20px;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk a,
#sfmaincontainer .sf-fieldset .subsubsub a {
    line-height: 19px;
    margin: 0;
    padding: 0;
    color: #9D9EA0;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk a.current,
#sfmaincontainer .sf-fieldset .subsubsub a.current {
    color: #257EA1;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk a .count,
#sfmaincontainer .sf-fieldset .subsubsub-desk a.current .count,
#sfmaincontainer .sf-fieldset .subsubsub a .count,
#sfmaincontainer .sf-fieldset .subsubsub a.current .count {
    font-weight: inherit;
    color: inherit;
}

/*#sfmaincontainer .sf-fieldset .tablenav {
    display: none;
}*/


#sfmaincontainer .sf-fieldset .tablenav {
        height: auto;
}



#sfmaincontainer .sf-tablenav {
        display: grid;
        grid-column-gap: 20px;
        grid-template-columns : 1fr 1fr 1fr;
        margin-bottom: 20px;
}


#sfmaincontainer .sf-tablenav .sf-form-row-search {
        grid-column : 1 / span 2;
        margin-bottom: 0;
}


#sfmaincontainer .sf-tablenav .sf-pagination {
        grid-column : 1 / span 2;
        margin-bottom: 10px;
}

#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav {
        display: initial;
}


#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .tablenav-pages {
        display: none;
}


#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .actions.bulkactions select {
        width: auto;
        margin: 0;
}

#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .actions.bulkactions {
        margin: 13px 0;
}


#sfmaincontainer .sf-panel-body-top-right .sf-input-group,
#sfmaincontainer .sf-panel-body-top-right .search-box {
    float: left;
    width: 200px;
    margin: 5px 20px 5px 0;
}
#sfmaincontainer .sf-panel-body-top-right .sf-input-group {
    width: 250px;
}
#sfmaincontainer .sf-panel-body-top-right .sf-input-group.sf-input-small {
    width: 220px;
}
#sfmaincontainer .sf-panel-body-top-right .search-box input[type="search"] {
    height: 40px;
    margin: 0;
    -khtml-border-radius: 20px;
    -webkit-border-radius: 20px;
    border-radius: 20px;
}
#sfmaincontainer .sf-panel-body-top-right .search-box #search-submit {
    display: none;
}

#sfmaincontainer .sf-link {
    display: inline-block;
    font-family: "Open Sans Semibold";
    font-size: 12px;
    color: #006992;
    cursor: pointer;
}
#sfmaincontainer .sf-link .sf-icon {
    margin: -3px 8px 0 0;
}

#sfmaincontainer .sf-item-controls {
    float: right;
}
#sfmaincontainer .sf-item-type {
    margin-right: 10px;
    color: #85A2BC;
    font-size: 10px;
    line-height: 14px;
    text-transform: uppercase;
}
#sfmaincontainer .sf-item-controls>.sf-icon {
    margin-right: 10px;
}

#sfmaincontainer .sf-pagination, #sfmaincontainer .tablenav .tablenav-pages {
    float: left;
    width: 100%;
    margin-top: 20px;
}
#sfmaincontainer .sf-pagination a, #sfmaincontainer .tablenav .tablenav-pages a {
    position: relative;
    float: left;
    width: 30px;
    min-height: 30px;
    margin: 5px 0;
    font-size: 16px;
    line-height: 22px;
    color: #006992;
    padding: 4px;
    text-align: center;
    background: none;
    border: 0;
}
#sfmaincontainer .sf-pagination a:hover, #sfmaincontainer .tablenav .tablenav-pages a:hover {
    background-color: rgba(0, 105, 146, .05);
}
#sfmaincontainer .sf-pagination .sf-first-page:after,
#sfmaincontainer .sf-pagination .sf-last-page:after,
#sfmaincontainer .tablenav .tablenav-pages a.sf-first-page:after,
#sfmaincontainer .tablenav .tablenav-pages a.sf-last-page:after

{
    content: '\2335';
    position: absolute;
    top: 4px;
    left: 12px;
    font-weight: bold;
    transform: rotate(90deg);
}
#sfmaincontainer .sf-pagination .sf-last-page:after,
#sfmaincontainer .tablenav .tablenav-pages a.sf-last-page:after
{
    top: 6px;
    left: 8px;
    transform: rotate(270deg);
}
/* ... */

